--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Morgan | Senior Visual Designer</title>
+    <title>Bassel Mohammed | Senior Visual Designer</title>
     
     <!-- Fonts: Inter for that clean, Apple-esque UI look -->
     <link rel="preconnect" href="https://Afonts.googleapis.com">
@@ -517,4 +517,5 @@
 </body>
 
 </html>
+
 
