--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <div class="w-full md:w-5/12 relative fade-up">
                     <div class="aspect-[3/4] overflow-hidden rounded-sm relative">
                         <!-- Placeholder Portrait -->
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=1000&auto=format&fit=crop" alt="Alex Morgan" class="w-full h-full object-cover grayscale hover:grayscale-0 transition-all duration-700">
+                        <img src="assets/images/me.jpg&w=1000&auto=format&fit=crop" alt="Alex Morgan" class="w-full h-full object-cover grayscale hover:grayscale-0 transition-all duration-700">
                         <div class="absolute bottom-0 left-0 w-full p-6 bg-gradient-to-t from-black/80 to-transparent">
                             <p class="text-white font-medium">Bassel Mohammed</p>
                             <p class="text-gray-400 text-sm">Based in Abha, KSA</p>
@@ -517,6 +517,7 @@
 </body>
 
 </html>
+
 
 
 
