--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <!-- Project 1 -->
                 <div class="group project-card cursor-pointer hover-trigger fade-up">
                     <div class="relative overflow-hidden aspect-[4/3] mb-6 rounded-sm bg-gray-900">
-                        <img src="assets/images/Artboard 12.png" alt="Project 1" class="project-img object-cover w-full h-full transition-transform duration-700 ease-out grayscale group-hover:grayscale-0 opacity-80 group-hover:opacity-100">
+                        <img src="assets/images/Artboard 12.png" alt="الأسبوع التمهيدي" class="project-img object-cover w-full h-full transition-transform duration-700 ease-out grayscale group-hover:grayscale-0 opacity-80 group-hover:opacity-100">
                         <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition-colors duration-500"></div>
                         <div class="project-overlay opacity-0 absolute inset-0 flex items-center justify-center transition-opacity duration-300">
                             <span class="bg-white/10 backdrop-blur-md px-6 py-3 rounded-full text-sm uppercase tracking-widest border border-white/20">View Case Study</span>
@@ -249,7 +249,7 @@
                 <!-- Project 2 (Offset) -->
                 <div class="group project-card cursor-pointer md:mt-24 hover-trigger fade-up">
                     <div class="relative overflow-hidden aspect-[4/3] mb-6 rounded-sm bg-gray-900">
-                        <img src="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=2000&auto=format&fit=crop" alt="Project 2" class="project-img object-cover w-full h-full transition-transform duration-700 ease-out grayscale group-hover:grayscale-0 opacity-80 group-hover:opacity-100">
+                        <img src="assets/images/BNR4.png" alt="National Day 95 photobooth" class="project-img object-cover w-full h-full transition-transform duration-700 ease-out grayscale group-hover:grayscale-0 opacity-80 group-hover:opacity-100">
                          <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition-colors duration-500"></div>
                          <div class="project-overlay opacity-0 absolute inset-0 flex items-center justify-center transition-opacity duration-300">
                             <span class="bg-white/10 backdrop-blur-md px-6 py-3 rounded-full text-sm uppercase tracking-widest border border-white/20">View Case Study</span>
@@ -267,7 +267,7 @@
                 <!-- Project 3 -->
                 <div class="group project-card cursor-pointer hover-trigger fade-up">
                     <div class="relative overflow-hidden aspect-[4/3] mb-6 rounded-sm bg-gray-900">
-                        <img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?q=80&w=2000&auto=format&fit=crop" alt="Project 3" class="project-img object-cover w-full h-full transition-transform duration-700 ease-out grayscale group-hover:grayscale-0 opacity-80 group-hover:opacity-100">
+                        <img src="assets/images/bnnr2.png" alt="الأسبوع التمهيدي" class="project-img object-cover w-full h-full transition-transform duration-700 ease-out grayscale group-hover:grayscale-0 opacity-80 group-hover:opacity-100">
                          <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition-colors duration-500"></div>
                          <div class="project-overlay opacity-0 absolute inset-0 flex items-center justify-center transition-opacity duration-300">
                             <span class="bg-white/10 backdrop-blur-md px-6 py-3 rounded-full text-sm uppercase tracking-widest border border-white/20">View Case Study</span>
@@ -285,7 +285,7 @@
                  <!-- Project 4 -->
                  <div class="group project-card cursor-pointer md:mt-24 hover-trigger fade-up">
                     <div class="relative overflow-hidden aspect-[4/3] mb-6 rounded-sm bg-gray-900">
-                        <img src="assets/images/Artboard 12.png&w=2000&auto=format&fit=crop" alt="Project 4" class="project-img object-cover w-full h-full transition-transform duration-700 ease-out grayscale group-hover:grayscale-0 opacity-80 group-hover:opacity-100">
+                        <img src="assets/images/BNR1.png" alt="National Day 95 Decoration" class="project-img object-cover w-full h-full transition-transform duration-700 ease-out grayscale group-hover:grayscale-0 opacity-80 group-hover:opacity-100">
                          <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition-colors duration-500"></div>
                          <div class="project-overlay opacity-0 absolute inset-0 flex items-center justify-center transition-opacity duration-300">
                             <span class="bg-white/10 backdrop-blur-md px-6 py-3 rounded-full text-sm uppercase tracking-widest border border-white/20">View Case Study</span>
@@ -355,7 +355,7 @@
                 <div class="w-full md:w-5/12 relative fade-up">
                     <div class="aspect-[3/4] overflow-hidden rounded-sm relative">
                         <!-- Placeholder Portrait -->
-                        <img src="assets/images/me.jpg&w=1000&auto=format&fit=crop" alt="Bassel Mohammed" class="w-full h-full object-cover grayscale hover:grayscale-0 transition-all duration-700">
+                        <img src="assets/images/me.jpg" alt="Bassel Mohammed" class="w-full h-full object-cover grayscale hover:grayscale-0 transition-all duration-700">
                         <div class="absolute bottom-0 left-0 w-full p-6 bg-gradient-to-t from-black/80 to-transparent">
                             <p class="text-white font-medium">Bassel Mohammed</p>
                             <p class="text-gray-400 text-sm">Based in Abha, KSA</p>
@@ -517,6 +517,7 @@
 </body>
 
 </html>
+
 
 
 
