--- a/index.html
+++ b/index.html
@@ -178,9 +178,7 @@
             <a href="#about" class="hover:text-gray-400 transition-colors hover-trigger">About</a>
         </div>
 
-        <a href="#contact" class="hidden md:block px-6 py-2 border border-white/20 rounded-full text-sm hover:bg-white hover:text-black transition-all duration-300 hover-trigger">
-            Let's Talk
-        </a>
+        
 
         <!-- Mobile Menu Icon -->
         <button class="md:hidden hover-trigger">
@@ -222,7 +220,7 @@
         <div class="max-w-7xl mx-auto">
             <div class="flex justify-between items-baseline mb-16 md:mb-24 fade-up">
                 <h2 class="text-4xl md:text-6xl font-bold tracking-tighter">Selected Works</h2>
-                <span class="text-gray-500 hidden md:inline">(2020 — 2024)</span>
+                <span class="text-gray-500 hidden md:inline">Projects</span>
             </div>
 
             <!-- Project Grid -->
@@ -500,6 +498,7 @@
 </body>
 
 </html>
+
 
 
 
